# agentrecall

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
skill/agent-recall/: SKILL.md
skill/agent-recall/references/: best-practices.md  categories-guide.md  memory-directive.md
skill/agent-recall/scripts/: check.py  search.py  setup.py  store.py
src/agentmemory/: __init__.py
src/agentrecall/: __init__.py  __main__.py  cli.py
src/agentrecall/core/: __init__.py  embeddings.py  result.py  schema.py  search.py  store.py
src/agentrecall/longterm/: __init__.py  migrate.py  search.py  store.py
src/agentrecall/shortterm/: __init__.py  check.py  template.py
tests/: conftest.py  test_check.py  test_cli.py  test_embeddings.py  test_migrate.py  test_public_api.py  test_schema.py  test_search.py  test_store.py
