[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-cerebro"
version = "0.1.1"
description = "Persistent two-tier memory for AI agents. Short-term markdown + long-term SQLite with semantic search."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ultrathink", email = "ceo@ultrathink.art" },
]
keywords = ["ai-agents", "memory", "embeddings", "sqlite", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
embeddings = ["openai>=1.0"]
all = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/ultrathink-art/agent-cerebro"
Repository = "https://github.com/ultrathink-art/agent-cerebro"
Issues = "https://github.com/ultrathink-art/agent-cerebro/issues"

[project.scripts]
cerebro = "agentrecall.cli:main"
agentrecall = "agentrecall.cli:main"
agentmemory = "agentrecall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrecall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
